[gd_scene load_steps=4 format=3 uid="uid://dspiokvu00mk8"]

[ext_resource type="Script" path="res://Scripts/Weapons/Projectiles/thragul-mines.gd" id="1_5clml"]
[ext_resource type="Texture2D" uid="uid://iey16yhjl6ph" path="res://Assets/Artwork/bullets/thragul-mines.png" id="2_k10d3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1a0n7"]
radius = 4.0

[node name="Bullet" type="Area2D"]
position = Vector2(0.5, 0.5)
collision_layer = 255
collision_mask = 255
script = ExtResource("1_5clml")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k10d3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1a0n7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 7)
scale = Vector2(0.4, 0.15)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
